--- a/css/Styles.css
+++ b/css/Styles.css
@@ -6,6 +6,16 @@ body{
     margin: 0;
     padding: 0;
 }
+
+#cabebcera{
+    background: blue;
+    box-shadow: 0px 5px 50px 0px rgba(0,0,0,0.05);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.sem;
+}
+
 #container{
     width: 70%;
     padding: 1em;
@@ -16,6 +26,8 @@ body{
 
 #container h1{
     font-size: 20px;
+}
 
-
+#post{
+    padding: 1em;
 }
