--- a/css/Styles.css
+++ b/css/Styles.css
@@ -1,62 +1,46 @@
-body
-{
-    background: #1e1f24;
+body{
     color: #333;
-    text-align: center;
-    font-family: Arial;
+    text-align: left;
+    font-family: sans-serif;
     font-size: 16px;
     margin: 0;
     padding: 0;
 }
 
-#cabecera
-{
-    background: #37488b;
-    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+#cabecera{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    gap: 10px;
+    padding: 10px;
+    background: #33A; 
     color: white;
     font-weight: bold;
-    margin: 0;
-    padding: 0.5em;
+    margin: -16px;
+    padding-top: 20px;
 }
 
-#cabecera #logo
-{
-    width: 20px;
-    vertical-align: middle;
-}
-
-#cabecera #tagline
-{
+#cabecera #tagline{
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
 }
 
-#container
-{
+#container{
     width: 70%;
-    padding: 0;
+    padding: 1em;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
 }
 
-#container h1
-{
+#container h1{
     font-size: 20px;
 }
-#post
-{
-    background: white;
+
+#post{
     padding: 1em;
 }
-
-#footer
-{
-    background: #37488b;
-    color: white;
-    text-align: center;
-    padding: 0.5em;
-}
-
-
